# deusexmachina

./: .gitignore  CMakeLists.txt  LICENSE.md  License.txt  README.md
Tools/: CMakeLists.txt
Tools/BBuilder/src/: Descs.cpp  ExtTools.cpp  Main.cpp  Main.h  Pack.cpp  Resources.cpp
Tools/Common/: CMakeLists.txt  CmdLineArgs.h  ContentForgeTool.cpp  ContentForgeTool.h  Data.cpp  Data.h  DataScheme.cpp  DataScheme.h  HRDParser.cpp  HRDParser.h  Logging.h  MurmurHash3.cpp  ParamsUtils.cpp  ParamsUtils.h  StringID.h  StringIDStorage.h  Subprocess.h  SubprocessWin32.cpp  Type.h  Utils.cpp  Utils.h  ValueTable.cpp  ValueTable.h  Vectors.h  src.cmake
Tools/Common/Render/: RenderEnums.h  SM30ShaderMeta.cpp  SM30ShaderMeta.h  ShaderMetaCommon.cpp  ShaderMetaCommon.h  USMShaderMeta.cpp  USMShaderMeta.h
Tools/Common/ShaderMeta/: SM30ShaderMeta.cpp  SM30ShaderMeta.h  USMShaderMeta.cpp  USMShaderMeta.h
Tools/Common/Src/: ConsoleApp.h
Tools/ContentForge/: CMakeLists.txt
Tools/ContentForge/cf-effect/: CFEffectFwd.h  CMakeLists.txt  Main.cpp  ParamsCommon.cpp  ParamsCommon.h  ParamsSM30.cpp  ParamsSM30.h  ParamsUSM.cpp  RenderEnums.cpp  RenderEnums.h  RenderState.h  src.cmake
Tools/ContentForge/cf-fbx/: CMakeLists.txt  Main.cpp  src.cmake
Tools/ContentForge/cf-gltf/: CMakeLists.txt  GLTFExtensions.cpp  GLTFExtensions.h  Main.cpp  src.cmake
Tools/ContentForge/cf-hlsl/: CMakeLists.txt  Main.cpp  src.cmake
Tools/ContentForge/cf-l3dt/: BTFile.cpp  BTFile.h  CMakeLists.txt  Main.cpp  README.md  src.cmake
Tools/ContentForge/cf-material/: CMakeLists.txt  Main.cpp  src.cmake
Tools/ContentForge/cf-navmesh/: CMakeLists.txt  Main.cpp  PolyUtils.cpp  README.md  src.cmake
Tools/ContentForge/cf-rpath/: CFRenderPathFwd.h  CMakeLists.txt  Main.cpp  ParamsCommon.cpp  ParamsCommon.h  ParamsSM30.cpp  ParamsUSM.cpp  src.cmake
Tools/ContentForge/cf-skybox/: CMakeLists.txt  Main.cpp  src.cmake
Tools/CreatorIDE/CreatorIDE/: AppConfiguration.cs  AttrPropertyDescriptor.cs  Category.cs  CommandLine.cs  CreatorIDE.csproj  CreatorIDEContextManager.cs  Entity.cs  EntityTemplate.cs  GetStringWnd.Designer.cs  GetStringWnd.cs  MainWnd.Designer.cs  MainWnd.cs  MainWnd.resx  Matrix44EditorCtl.Designer.cs  Matrix44EditorCtl.cs  NewCategoryWnd.Designer.cs  NewCategoryWnd.cs  NewLocationWnd.Designer.cs  NewLocationWnd.cs  Program.cs  ResourceSelectorWnd.Designer.cs  ResourceSelectorWnd.cs  SettingsWnd.Designer.cs  SettingsWnd.cs  Types.cs  WindowManager.cs
Tools/CreatorIDE/CreatorIDECore/: AppContextManager.cs  CreatorIDECore.csproj  IAppConfiguration.cs  IAppContextManager.cs  IWindowManager.cs  TypeDictionary.cs
Tools/CreatorIDE/EngineAPI/: FactoryRegHelper.h  Main.cpp  StdAPI.h
Tools/DEMShaderCompiler/src/: D3D9ShaderReflectionAPI.h  DEMD3DInclude.cpp  DEMD3DInclude.h  ShaderCompiler.cpp  ShaderDB.cpp  ShaderReflection.h  ShaderReflectionSM30.h  ShaderReflectionUSM.cpp  ShaderReflectionUSM.h
Tools/DialogEditor/: DialogEditor.AssemblyInfo.cs  DialogEditor.Version.cs  DialogEditor.csproj.targets  DialogEditor.sln  _Readme_MSBuild.txt
Tools/DialogEditor/DialogEditor/: ControlDialogNodeEditor.Designer.cs  ControlDialogNodeEditor.cs  ControlDialogNodeEditor.resx  ControlDialogTree.Designer.cs  ControlDialogTree.cs  ControlDialogTree.resx  ControlPlayerNode.Designer.cs  ControlPlayerNode.cs  ControlPlayerNode.resx  DialogEditor.csproj  DialogObject.cs  DialogObjectManager.cs  FormCharactersProperties.Designer.cs  FormCharactersProperties.cs  FormDialogEditor.Designer.cs  FormDialogEditor.cs  FormDialogEditor.resx  FormDialogPlayer.Designer.cs  FormDialogPlayer.cs  FormDialogPlayer.resx  FormDialogProperties.Designer.cs  FormDialogProperties.cs  FormDialogProperties.resx  FormExtensions.cs  FormPropertyEditor.Designer.cs  FormPropertyEditor.cs  FormPropertyEditor.resx  PathHelper.cs  Program.cs  ProgramConfiguration.cs  ProgramEnvironment.cs  SaveForm.Designer.cs  SaveForm.cs  SaveForm.resx  UserPreferences.cs
Tools/DialogEditor/DialogLogic/: ActionDescriptor.cs  AnswerCollectionDialogGraphNode.cs  CharacterAttributeCollection.cs  CharacterContainer.cs  DialogCharacter.CustomTypeDescriptor.cs  DialogCharacter.cs  DialogCharacterPropertyDescriptor.cs  DialogGraph.cs  DialogGraphLink.cs  DialogGraphLinkDirection.cs  DialogGraphNodeBase.cs  DialogGraphNodeType.cs  DialogGraphPhraseNodeBase.cs  DialogInfo.cs  DialogLogic.csproj  Dialogs.IList.cs  Dialogs.cs  EmptyDialogGraphNode.cs  ICharacterContainer.cs  IDialogUserProperties.cs  IDisplayable.cs  PhraseDialogGraphNode.cs  PropertyTypeCode.cs  ValueParser.cs  XElementExensions.cs
Tools/DialogEditor/HrdLib/: HrdArray.cs  HrdAssemblyCache.cs  HrdAttribute.cs  HrdCompilerException.cs  HrdContractException.cs  HrdDocument.Streaming.cs  HrdDocument.cs  HrdElement.cs  HrdElementExtension.cs  HrdGeneratorQueue.cs  HrdIgnoreAttribute.cs  HrdIndentWriter.cs  HrdLib.csproj  HrdLidDiagnostics.cs  HrdMethodWriter.cs  HrdNode.cs  HrdPropertySetterAttribute.cs  HrdReader.cs  HrdSerializationAttribute.cs  HrdSerializer.cs  HrdSerializerAssembly.Deserialization.cs  HrdSerializerAssembly.Serialization.cs  HrdSerializerAssembly.cs  HrdSerializerPropertyInfo.cs  HrdSerializerTypeInfo.cs  HrdSerizalizableAttribute.cs  HrdStructureValidationException.cs  HrdWriter.cs  IHrdSerializable.cs  IHrdSerializer.cs  NotDisposingStreamWriter.cs  ReflectionHelper.cs  Resources.resx  SR.cs
Tools/Docs/FileFormats/: Effect(eff v1.0).csv
Tools/Docs/Npp syntax highlighting/: HLSL.xml  HRD.xml
Tools/SceneCommon/: CMakeLists.txt  FindJasper.cmake  SceneTools.cpp  SceneTools.h  src.cmake
Tools/ShaderCompiler/: CMakeLists.txt  src.cmake
Tools/ShaderCompiler/src/: Buffer.cpp  Buffer.h  D3D9ShaderReflectionAPI.cpp  D3D9ShaderReflectionAPI.h  DEMD3DInclude.cpp  DEMD3DInclude.h  DEMShaderCompilerDLL.cpp  DEMShaderCompilerDLL.h  Data.cpp  Data.h  LogDelegate.h  Main.cpp  ShaderCompiler.cpp  ShaderCompiler.h  (+14 more)
Tools/Src/: CmdLineArgs.h  ConsoleApp.h
Tools/Utils/: GetDEM.bat
Tools/lib/: ShaderCompiler.exp  ShaderCompiler.lib  sqlite3.lib
Tools/schemes/: scene.dss  settings.hrd
(+5140 files in other folders)
