cmake_minimum_required(VERSION 3.8.2) # source_group TREE
project(cf-gltf)

# Dependency: glTF SDK
set(RAPIDJSON_BUILD_ASAN OFF CACHE INTERNAL "" FORCE)
set(RAPIDJSON_BUILD_CXX11 ON CACHE INTERNAL "" FORCE)
set(RAPIDJSON_BUILD_DOC OFF CACHE INTERNAL "" FORCE)
set(RAPIDJSON_BUILD_EXAMPLES OFF CACHE INTERNAL "" FORCE)
set(RAPIDJSON_BUILD_TESTS OFF CACHE INTERNAL "" FORCE)
set(RAPIDJSON_BUILD_THIRDPARTY_GTEST OFF CACHE INTERNAL "" FORCE)
set(RAPIDJSON_BUILD_UBSAN OFF CACHE INTERNAL "" FORCE)
set(RAPIDJSON_ENABLE_INSTRUMENTATION_OPT OFF CACHE INTERNAL "" FORCE)
set(RAPIDJSON_HAS_STDSTRING ON CACHE INTERNAL "" FORCE)
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/../../../Deps/GLTFSDK" "${CMAKE_CURRENT_BINARY_DIR}/Deps/GLTFSDK")

# Tool

include("${CMAKE_CURRENT_SOURCE_DIR}/src.cmake")
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${DEM_CF_GLTF_HEADERS} ${DEM_CF_GLTF_SOURCES})
add_executable(cf-gltf ${DEM_CF_GLTF_HEADERS} ${DEM_CF_GLTF_SOURCES})
target_link_libraries(cf-gltf PRIVATE SceneCommon GLTFSDK)
set_target_properties(cf-gltf PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
